<resources>
    <string name="app_name">HealthSG</string>

    <!--- FOR LOGIN AND REGISTRATION -->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_profession">Profession</string>
    <string name="hint_credential">Credential</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">FiveMin</string>
    <!-- END OF LOGIN AND REGISTRATION -->

    <!-- start for clinic -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_clinic_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_direction">Map</string>
    <string name="title_activity_maps1">Map</string>

    <string-array name="clinic_sorter_array">
        <item>Default sorting</item>
        <item>Sort by distance</item>
        <item>Sort by rating</item>
        <item>Sort by name</item>
    </string-array>

    <string-array name="clinic_filter_array">
        <item>No filter </item>
        <item>Filter by distance: less than 1km </item>
        <item>Filter by distance: less than 5km </item>
        <item>Filter by distance: less than 10km </item>
        <item>Filter by rating: at least 3 stars </item>
        <item>Filter by rating: at least 4 stars </item>
        <item>Filter by rating: 5 stars </item>
    </string-array>
    <!-- end of clinic -->

    <!-- start of firstaid -->
    <string-array name="injury_category">
        <item>Burns</item>
        <item>Stings/Bites</item>
        <item>Sprain/Strain</item>
        <item>Open Wounds</item>
        <item>Choking</item>
    </string-array>

    <string-array name="burn_type">
        <item>Fire Burn</item>
        <item>Electrical Burn</item>
        <item>Chemical Burn</item>
        <item>Scalding</item>
        <item>Sunburn</item>
    </string-array>

    <string-array name="bite_type">
        <item>Insect Bite</item>
        <item>Spider Bite</item>
        <item>Snake Bite</item>
    </string-array>

    <string-array name="choking_type">
        <item>Choking (Adults)</item>
        <item>Choking (Infant)</item>
    </string-array>

    <string-array name="openwound_type">
        <item>Abrasion</item>
        <item>Laceration</item>
        <item>Incision</item>
        <item>Puncture</item>
        <item>Avulsion</item>
    </string-array>

    <string-array name="sprainstrain_type">
        <item>Strain</item>
        <item>Sprain</item>
    </string-array>
    <!-- end of firstaid -->

    <!-- for navigation bar -->
    <string name="menu_clinic">Clinic</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_firstaid">First-Aid</string>
    <string name="menu_article">Article</string>
    <string name="menu_settings">Settings</string>

    <!-- end of navigation bar -->

</resources>
