<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bottom_nav_clinic"
        android:enabled="true"
        app:showAsAction="always"
        android:title="@string/menu_clinic"
        android:icon="@drawable/menu_clinic_icon"/>

    <item android:id="@+id/bottom_nav_forum"
        android:enabled="true"
        app:showAsAction="always"
        android:title="@string/menu_forum"
        android:icon="@drawable/menu_forum_icon"/>

    <item android:id="@+id/bottom_nav_firstaid"
        android:enabled="true"
        app:showAsAction="always"
        android:title="@string/menu_firstaid"
        android:icon="@drawable/menu_firstaid_icon"/>

    <item android:id="@+id/bottom_nav_article"
        android:enabled="true"
        app:showAsAction="always"
        android:title="@string/menu_article"
        android:icon="@drawable/menu_article_icon"/>

    <item android:id="@+id/bottom_nav_settings"
        android:enabled="true"
        app:showAsAction="always"
        android:title="@string/menu_settings"
        android:icon="@drawable/menu_settings_icon"/>
</menu>